--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo: # logo.png # filename of a logo image that has been placed into your image
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
   name: Samantha Romanick
-  avatar: #Sami Profile Photo.jpg
+  avatar: #SamiSciencePhoto.jpg
   bio: Postdoctoral Fellow at University of Rochester, Biomedical Engineering. 
   email: sromanic@ur.rochester.edu
   twitter: #twitter username (no '@')
