--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: Samantha Romanick
 locale: en_US
-logo: # logo.png # filename of a logo image that has been placed into your images directory
+logo: # SamiSciencePhoto.jpg # filename of a logo image that has been placed into your images directory
 
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
